# pico-freeRTOS

./: .gitignore  CMakeLists.txt
Mastering the FreeRTOS Kernel/: FreeRTOSConfig.h
Mastering the FreeRTOS Kernel/Ch3_tasks/: CMakeLists.txt  tasks.cpp
Mastering the FreeRTOS Kernel/Ch4_queues/: CMakeLists.txt  preemtive_queuing.cpp  queuing_pointers_string.cpp  readme.md
Mastering the FreeRTOS Kernel/Ch4_queues/preemtive_queuing/: CMakeLists.txt
Mastering the FreeRTOS Kernel/Ch4_queues/queuing_pointers_string/: CMakeLists.txt
Mastering the FreeRTOS Kernel/Ch5_timers/: CMakeLists.txt  timer_callbacks.cpp  timers.cpp
Mastering the FreeRTOS Kernel/Ch6_interrupt_handling/: CMakeLists.txt  gpioInterrupt_BinarySemaphore.cpp  gpioInterrupt_countingSemaphore.cpp  gpioInterrupt_deferToDaemonTask.cpp  gpioInterrupt_isrQueues.cpp  gpioInterrupt_semaphore.cpp
Mastering the FreeRTOS Kernel/Ch6_interrupts_and_semaphores/: CMakeLists.txt  interrupts.cpp
Mastering the FreeRTOS Kernel/Ch7_resource_management/: CMakeLists.txt  gatekeeperTask_printString.cpp  mutex_printString.cpp
Mastering the FreeRTOS Kernel/Ch8_event_groups/: CMakeLists.txt  eventGrouping_interrupt.cpp  eventGrouping_synchronizing.cpp
Mastering the FreeRTOS Kernel/Ch9_task_notifications/: CMakeLists.txt  taskNotification_interrupt.cpp
projects/: CMakeLists.txt
projects/Ch4_queues/: CMakeLists.txt
projects/Ch4_queues/preemtive_queuing/: preemtive_queuing.cpp
projects/blink/: CMakeLists.txt  blink.cpp
projects/queues/queuing_pointers/: CMakeLists.txt  queuing_pointers.cpp
projects/tasks/: tasks.cpp
